# FausEngine

./: FausEngineDLL.rar  README.md
DLL/FausEngine/: FsPointLight.h  FsShader.h
DLL/FausEngine/Libs/: FausEngine.lib
Example/: CMakeLists.txt
Example/UserGame/: CMakeLists.txt  Escenario.cpp  Escenario.h  UserGame.cpp  UserGame.h  main.cpp
Example/UserGame/FausEngine/: FsCamera.h  FsDirectionalLight.h  FsMaterial.h  FsMaths.h  FsMesh.h  FsShader.h  FsSkybox.h
Example/UserGame/FausEngine/Libs/: FausEngine.lib
FausEngine/: CMakeLists.txt  FsGame.h  FsLight.h  FsModel.h  FsOmniShadowMap.h  FsPointLight.h  FsShadowMap.h  FsSpotLight.h  FsTexture.h  conanfile.txt
FausEngine/FausEngine/: CMakeLists.txt  conanfile.txt
FausEngine/FausEngine/MotorGrafico/: CMakeLists.txt
FausEngine/FausEngine/MotorGrafico/Headers/: FsGame.h
FausEngine/FausEngine/MotorGrafico/Shaders/: shader.frag
FausEngine/FausEngine/MotorGrafico/Source/: FsGame.cpp  FsMaths.cpp  FsObject.cpp
FausEngine/FausEngine/ejemplo/: Escenario.cpp  Escenario.h  main.cpp
FausEngine/FausEngine/ejemplo/Models/arma/: LugerP08.fbx
FausEngine/FausEngine/ejemplo/Models/nave/: 1.c4d
FausEngine/Motor/: CMakeLists.txt
FausEngine/Motor/Headers/: FsCamera.h  FsCollider.h  FsDirectionalLight.h  FsGame.h  FsImage.h  FsImage2D.h  FsLight.h  FsLog.h  FsMaterial.h  FsMaths.h  FsMesh.h  FsPointLight.h  FsScene.h  FsShader.h  FsSkybox.h  FsSpotLight.h  FsText.h  Window.h
FausEngine/Motor/Shaders/: fragmentImage.glsl  fragmentMain.glsl  fragmentSky.glsl  fragmentText.glsl  vertexImage.glsl  vertexMain.glsl  vertexSky.glsl  vertexText.glsl
FausEngine/Motor/Source/: FsCamera.cpp  FsCollider.cpp  FsDirectionalLight.cpp  FsGame.cpp  FsImage.cpp  FsImage2D.cpp  FsLight.cpp  FsLog.cpp  FsMaterial.cpp  FsMaths.cpp  FsMesh.cpp  FsPointLight.cpp  FsScene.cpp  FsShader.cpp  FsSkybox.cpp  FsSpotLight.cpp  FsText.cpp  Window.cpp
FausEngine/MotorGrafico/: CMakeLists.txt
FausEngine/MotorGrafico/Headers/: FsCamera.h  FsCollider.h  FsDLL.h  FsGame.h  FsLight.h  FsMaterial.h  FsMaths.h  FsMesh.h  FsShader.h  FsSkybox.h  Mesh.h  Shader.h  Window.h
FausEngine/MotorGrafico/Shaders/: FsFragmentShader.glsl
FausEngine/MotorGrafico/Source/: FsCamera.cpp  FsCollider.cpp  FsDirectionalLight.cpp  FsGame.cpp  FsLight.cpp  FsMaterial.cpp  FsMaths.cpp  FsMesh.cpp  FsPointLight.cpp  FsShader.cpp  FsSkybox.cpp  FsSpotLight.cpp  Mesh.cpp  Shader.cpp  Window.cpp
FausEngine/ejemplo/: Coins.cpp  Coins.h  Escenario.cpp  Escenario.h  Ilumination.cpp  Ilumination.h  Items.cpp  Items.h  Jugador.cpp  Jugador.h  Plataforms.cpp  Plataforms.h  Player.cpp  Player.h  Scenes.cpp  Scenes.h  SpacePlataform.cpp  SpacePlataform.h  Ui.cpp  Ui.h  UserGame.cpp  UserGame.h  main.cpp
FausEngine/ejemplo/Models/: PlanoPiso.fbx  Two-storey house.7z
FausEngine/ejemplo/Models/arma/: MATERIALS.txt
FausEngine/ejemplo/Models/asteroide/: asteroide.mtl
FausEngine/ejemplo/Models/nave/: 1.mtl
FausEngine/example/SpacePlataform/: Coins.cpp  Ui.h  main.cpp
FausEngine/example/SpacePlataform/FausEngine/: FsLight.h  FsMaterial.h
FausEngine/include/: FsGame.h  FsPointLight.h
FausEngine/lib/: FausEngine.lib
FausEngine/shader/: FsFragmentShader.glsl
SpacePlataform/: CMakeLists.txt
SpacePlataform/SpacePlataform/: CMakeLists.txt  Coins.h  Ilumination.cpp  Ilumination.h  Items.cpp  Items.h  Plataforms.cpp  Plataforms.h  Player.cpp  Player.h  Scenes.cpp  Scenes.h  SpacePlataform.cpp  SpacePlataform.h  Ui.cpp  main.cpp
SpacePlataform/SpacePlataform/Assets/Models/: asteroide.mtl
SpacePlataform/SpacePlataform/Assets/Models/Two-storey house/Two-storey house/: p3dm.ru_Two-storey house.max
SpacePlataform/SpacePlataform/Assets/Textures/: oasisnight_up.tga
SpacePlataform/SpacePlataform/FausEngine/: FsCollider.h  FsDirectionalLight.h  FsExport.h  FsImage.h  FsMaterial.h  FsMaths.h  FsMesh.h  FsScene.h  FsShader.h  FsText.h
SpacePlataform/SpacePlataform/FausEngine/libs/: FausEngine.lib
UserGame Ejecutable/: UserGame.ilk
UserGame Ejecutable/UserGame/: UserGame.ilk  cmake_install.cmake
UserGame/UserGame/: CMakeLists.txt  Escenario.cpp  Escenario.h  UserGame.cpp  UserGame.h  main.cpp
UserGame/UserGame/FausEngine/: FsCollider.h  FsGame.h  FsImage2D.h  FsMaths.h  FsShader.h  FsSpotLight.h
UserGame/UserGame/FausEngine/Libs/: FausEngine.lib
